--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -14,8 +14,8 @@ src_files:
   - app/assets/javascripts/editor/lib/env.js
   - app/assets/javascripts/lib/jquery/jquery-1.10.2.min.js
   - app/assets/javascripts/lib/jquery/jquery.simulate.js
-  - app/assets/javascripts/lib/bootstrap/bootstrap.min.js
-  - app/assets/javascripts/lib/bootstrap/jquery.bootstrap-growl.min.js
+  - app/assets/javascripts/lib/jquery/jquery.growl.js
+  - app/assets/javascripts/lib/foundation/foundation.js
   - app/assets/javascripts/lib/angular/angular.min.js
   - app/assets/javascripts/lib/angular/angular-sanitize.js
   - app/assets/javascripts/lib/angular/angular-mocks.js
